@@ -1,11 +1,13 @@
 [Unit]
 Description=Network Traffic Monitoring
-After=network.target syslog.target
+After=network-online.target syslog.target
 
 [Service]
-ExecStart=/bin/goProbe -config /opt/ntm/goProbe/etc/goprobe.conf
+Type=simple
+ExecStart=/bin/goProbe -config /etc/goprobe.conf
 StandardOutput=syslog
 Restart=on-failure
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target
