@@ -1,0 +1,3 @@
+#!/bin/sh
+
+systemctl daemon-reload
